package com.restaurant.pos.enums;

public enum StationType {
    KITCHEN,
    BAR,
    PIZZA
}
